# xv

./: .gitignore  .metadata  Imakefile  Makefile  Makefile.am  README.debian  README.jumbo  autogen.sh  configure.ac  vdcomp.c  xv.c  xv.h  xvalg.c  xvbmp.c  xvbrowse.c  xvbutt.c  xvcpmask.c  xvctrl.c  xvcut.c  xvdir.c  xvevent.c  xvg3.c  xvgam.c  xvgif.c  xvgifwr.c  xvgrab.c  xvgraf.c  xviff.c  xvimage.c  xvinfo.c  xvjp2k.c  xvjpeg.c  xvmask.c  xvmeko.c  xvmgcsfx.c  xvmisc.c  xvpbm.c  xvpcd.c  xvpic2.c  xvpng.c  (+10 more)
bits/: br_webp
contrib/: xv.desktop
docs/: bggen.man  xcmap.man  xv.man
