AUTOMAKE_OPTIONS = foreign
CFLAGS = -g
LDFLAGS =

bin_PROGRAMS = xv bggen xcmap xvpictoppm vdcomp

bggen_SOURCES = bggen.c
vdcomp_SOURCES = vdcomp.c
xcmap_SOURCES = xcmap.c
xvpictoppm_SOURCES = xvpictoppm.c

xv_SOURCES = copyright.h  xvdflt.h  xv.h  xvhips.h  xvml.h \
	vprintf.c xv24to8.c xvalg.c xvbmp.c xvbrowse.c xvbutt.c xv.c \
	xvcolor.c xvctrl.c xvcut.c xvdflt.c xvdial.c xvdir.c xvevent.c \
	xvfits.c xvgam.c xvgif.c xvgifwr.c xvgrab.c xvgraf.c xvhips.c \
	xviff.c xvimage.c xvinfo.c xviris.c xvjp2k.c xvjpeg.c xvmag.c \
	xvmaki.c xvmgcsfx.c xvmisc.c xvml.c xvpbm.c xvpcd.c xvpcx.c \
	xvpds.c xvpi.c xvpic2.c xvpic.c xvpictoppm.c xvpm.c xvpng.c \
	xvpopup.c xvps.c xvrle.c xvroot.c xvscrl.c xvsmooth.c xvsunras.c \
	xvtarga.c xvtext.c xvtiff.c xvtiffwr.c xvvd.c xvwbmp.c xvxbm.c \
	xvxpm.c xvxwd.c xvzx.c
